Добавляет кнопки закрытия

--- a/source/index.html
+++ b/source/index.html
@@ -26,6 +26,9 @@
       <div class="module__message">
         Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
@@ -35,6 +38,9 @@
           <span class="module__date">18:50, Сегодня</span>
         </div>
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
@@ -44,6 +50,9 @@
           <span class="module__date">18:45, Сегодня</span>
         </div>
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
@@ -53,6 +62,9 @@
           <span class="module__date">18:45, Сегодня</span>
         </div>
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
@@ -65,6 +77,9 @@
       <div class="module__message">
         Установлен климатический режим «Фиджи»
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module module--alert grid__cell grid__cell--m">
       <div class="module__top">
@@ -77,6 +92,9 @@
       <div class="module__message">
         В комнате открыто окно, закройте его и повторите попытку
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
@@ -89,6 +107,9 @@
       <div class="module__message">
         Сейчас проигрывается:
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
@@ -101,6 +122,9 @@
       <div class="module__message">
         Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
@@ -113,6 +137,9 @@
       <div class="module__message">
         Ура! Устройство «Оконный сенсор» снова в строю!
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module module--alert grid__cell grid__cell--l">
       <div class="module__top">
@@ -125,6 +152,9 @@
       <div class="module__message">
         Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
@@ -134,6 +164,9 @@
           <span class="module__date">16:20, Сегодня</span>
         </div>
       </div>
+      <button class="module__close" type="button">
+        <span class="visually-hidden">Понятно!</span>
+      </button>
     </article>
   </div>
 
