--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,9 @@
   <div class="grid">
     <article class="module grid__cell grid__cell--l">
       <div class="module__top">
-        <h3 class="module__title">Еженедельный отчет по расходам ресурсов</h3>
+        <h3 class="module__title">
+          Еженедельный отчет по расходам ресурсов
+        </h3>
         <div class="module__details">
           <span class="module__type">Сенсоры потребления</span>
           <span class="module__date">19:00, Сегодня</span>
@@ -27,48 +29,60 @@
         Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
-        <h3 class="module__title">Дверь открыта</h3>
+        <h3 class="module__title">
+          Дверь открыта
+        </h3>
         <div class="module__details">
           <span class="module__type">Сенсор входной двери</span>
           <span class="module__date">18:50, Сегодня</span>
         </div>
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
-        <h3 class="module__title">Уборка закончена</h3>
+        <h3 class="module__title">
+          Уборка закончена
+        </h3>
         <div class="module__details">
           <span class="module__type">Пылесос</span>
           <span class="module__date">18:45, Сегодня</span>
         </div>
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
-        <h3 class="module__title">Новый пользователь</h3>
+        <h3 class="module__title">
+          Новый пользователь
+        </h3>
         <div class="module__details">
           <span class="module__type">Роутер</span>
           <span class="module__date">18:45, Сегодня</span>
         </div>
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
-        <h3 class="module__title">Изменен климатический режим</h3>
+        <h3 class="module__title">
+          Изменен климатический режим
+        </h3>
         <div class="module__details">
           <span class="module__type">Сенсор микроклимата</span>
           <span class="module__date">18:30, Сегодня</span>
@@ -78,12 +92,15 @@
         Установлен климатический режим «Фиджи»
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module module--alert grid__cell grid__cell--m">
       <div class="module__top">
-        <h3 class="module__title">Невозможно включить кондиционер</h3>
+        <h3 class="module__title">
+          Невозможно включить кондиционер
+        </h3>
         <div class="module__details">
           <span class="module__type">Кондиционер</span>
           <span class="module__date">18:21, Сегодня</span>
@@ -93,12 +110,15 @@
         В комнате открыто окно, закройте его и повторите попытку
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
-        <h3 class="module__title">Музыка включена</h3>
+        <h3 class="module__title">
+          Музыка включена
+        </h3>
         <div class="module__details">
           <span class="module__type">Яндекс.Станция</span>
           <span class="module__date">18:16, Сегодня</span>
@@ -108,12 +128,15 @@
         Сейчас проигрывается:
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
-        <h3 class="module__title">Заканчивается молоко</h3>
+        <h3 class="module__title">
+          Заканчивается молоко
+        </h3>
         <div class="module__details">
           <span class="module__type">Холодильник</span>
           <span class="module__date">17:23, Сегодня</span>
@@ -123,12 +146,15 @@
         Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
-        <h3 class="module__title">Зарядка завершена</h3>
+        <h3 class="module__title">
+          Зарядка завершена
+        </h3>
         <div class="module__details">
           <span class="module__type">Оконный сенсор</span>
           <span class="module__date">16:22, Сегодня</span>
@@ -138,12 +164,15 @@
         Ура! Устройство «Оконный сенсор» снова в строю!
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module module--alert grid__cell grid__cell--l">
       <div class="module__top">
-        <h3 class="module__title">Пылесос застрял</h3>
+        <h3 class="module__title">
+          Пылесос застрял
+        </h3>
         <div class="module__details">
           <span class="module__type">Сенсор движения</span>
           <span class="module__date">16:17, Сегодня</span>
@@ -153,18 +182,22 @@
         Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
-        <h3 class="module__title">Вода вскипела</h3>
+        <h3 class="module__title">
+          Вода вскипела
+        </h3>
         <div class="module__details">
           <span class="module__type">Чайник</span>
           <span class="module__date">16:20, Сегодня</span>
         </div>
       </div>
       <button class="module__close" type="button">
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg"><g id="Events" fill="none" fill-rule="evenodd"><g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero" stroke="currentColor"><g id="151882" transform="translate(46 403)"><path d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z" id="Shape"/></g></g></g></svg>
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
