--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,11 @@
 <h2 class="page-content__title">Лента событий</h2>
 
   <div class="grid">
+
     <article class="module grid__cell grid__cell--l">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Еженедельный отчет по расходам ресурсов
         </h3>
         <div class="module__details">
@@ -33,9 +35,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Дверь открыта
         </h3>
         <div class="module__details">
@@ -48,9 +52,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Уборка закончена
         </h3>
         <div class="module__details">
@@ -63,9 +69,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Новый пользователь
         </h3>
         <div class="module__details">
@@ -78,9 +86,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Изменен климатический режим
         </h3>
         <div class="module__details">
@@ -96,9 +106,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module module--alert grid__cell grid__cell--m">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Невозможно включить кондиционер
         </h3>
         <div class="module__details">
@@ -114,9 +126,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Музыка включена
         </h3>
         <div class="module__details">
@@ -132,9 +146,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--m">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Заканчивается молоко
         </h3>
         <div class="module__details">
@@ -150,9 +166,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Зарядка завершена
         </h3>
         <div class="module__details">
@@ -168,9 +186,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module module--alert grid__cell grid__cell--l">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Пылесос застрял
         </h3>
         <div class="module__details">
@@ -186,9 +206,11 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
     <article class="module grid__cell grid__cell--s">
       <div class="module__top">
         <h3 class="module__title">
+          <span class="module__icon"></span>
           Вода вскипела
         </h3>
         <div class="module__details">
@@ -201,6 +223,7 @@
         <span class="visually-hidden">Понятно!</span>
       </button>
     </article>
+
   </div>
 
 </main>
