--- a/source/index.html
+++ b/source/index.html
@@ -466,6 +466,36 @@
 </main>
 
 @@include('partials/page-footer.html')
+<template>
+  <article class="module grid__cell">
+    <div class="module__top">
+      <h3 class="module__title">
+        <span class="module__icon"></span>
+      </h3>
+      <div class="module__details">
+        <span class="module__type"></span>
+        <span class="module__date"></span>
+      </div>
+    </div>
+    <div class="module__message"></div>
+    <button class="module__close" type="button">
+      <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+        <g id="Events" fill="none" fill-rule="evenodd">
+          <g id="Assets" transform="translate(-45 -402)" fill="currentColor" fill-rule="nonzero"
+             stroke="currentColor">
+            <g id="151882" transform="translate(46 403)">
+              <path
+                  d="M7.061 6l4.72-4.719A.75.75 0 1 0 10.718.22L6 4.939 1.281.219A.75.75 0 1 0 .22 1.282l4.719 4.72-4.72 4.718a.75.75 0 1 0 1.062 1.061l4.72-4.719 4.718 4.72a.748.748 0 0 0 1.061 0 .75.75 0 0 0 0-1.062L7.061 6z"
+                  id="Shape"/>
+            </g>
+          </g>
+        </g>
+      </svg>
+      <span class="visually-hidden">Понятно!</span>
+    </button>
+  </article>
+</template>
+
 <script src="js/script.min.js"></script>
 </body>
 </html>
