--- a/source/index.html
+++ b/source/index.html
@@ -161,6 +161,10 @@
       </div>
       <div class="module__message">
         Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
+        <picture>
+          <source srcset="images/stats@1x.webp 1x, images/stats@2x.webp 2x" type="image/webp">
+          <img class="module__image" src="images/stats@1x.jpg 1x" srcset="images/stats@2x.jpg 2x" alt="Еженедельный отчет по расходам ресурсов">
+        </picture>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
