--- a/source/index.html
+++ b/source/index.html
@@ -446,7 +446,12 @@
         <span class="module__date"></span>
       </div>
     </div>
-    <div class="module__message"></div>
+    <div class="module__message">
+      <picture>
+        <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
+        <img class="module__image" src="images/image@1x.jpg 1x" srcset="images/image@2x.jpg 2x" alt="">
+      </picture>
+    </div>
     <button class="module__close" type="button">
       <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#cross"></use>
