--- a/source/index.html
+++ b/source/index.html
@@ -269,6 +269,14 @@
       </div>
       <div class="module__message">
         Установлен климатический режим «Фиджи»
+        <div class="module__stats">
+          <span class="module__degree">
+            Температура: <strong>24 C</strong>
+          </span>
+          <span class="module__humidity">
+            Влажность: <strong>80%</strong>
+          </span>
+        </div>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -456,6 +464,14 @@
       </div>
     </div>
     <div class="module__message">
+      <div class="module__stats">
+          <span class="module__degree">
+            Температура: <strong></strong>
+          </span>
+        <span class="module__humidity">
+            Влажность: <strong></strong>
+          </span>
+      </div>
       <picture>
         <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
         <img class="module__image" src="images/image@1x.jpg 1x" srcset="images/image@2x.jpg 2x" alt="">
