--- a/source/index.html
+++ b/source/index.html
@@ -269,7 +269,7 @@
       </div>
       <div class="module__message">
         Установлен климатический режим «Фиджи»
-        <div class="module__foot">
+        <div class="module__bottom">
           <span class="module__left">
             Температура: <strong>24 C</strong>
           </span>
@@ -358,7 +358,7 @@
       </div>
       <div class="module__message">
         Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
-        <div class="module__foot">
+        <div class="module__bottom">
           <p class="module__left">
             <button class="button button--yellow" type="button">Да</button>
           </p>
@@ -475,7 +475,7 @@
       </div>
     </div>
     <div class="module__message">
-      <div class="module__foot">
+      <div class="module__bottom">
         <span class="module__left">
           Температура: <strong></strong>
         </span>
