--- a/source/index.html
+++ b/source/index.html
@@ -330,7 +330,19 @@
       <div class="module__message">
         <div class="player">
           <p>Сейчас проигрывается:</p>
-
+          <div class="player__content">
+            <div class="player__song">
+              <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
+              <div>
+                <p class="player__name">Florence & The Machine - Big God</p>
+                <div class="player__progress">
+                  <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
+                  <span class="player__time">4:31</span>
+                </div>
+              </div>
+            </div>
+            <div class="player__controls"></div>
+          </div>
         </div>
       </div>
       <button class="module__close" type="button">
@@ -422,6 +434,14 @@
           <source srcset="images/get_it_from_mocks@1x.webp 1x, images/get_it_from_mocks@2x.webp 2x" type="image/webp">
           <img class="module__image" src="images/get_it_from_mocks@1x.jpg 1x" srcset="images/get_it_from_mocks@2x.jpg 2x" alt="Вид с камеры в гостиной">
         </picture>
+        <div class="module__bottom">
+          <span class="module__left">
+            Приближение: 78%
+          </span>
+          <span class="module__right">
+            Яркость: 50%
+          </span>
+        </div>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
