--- a/source/index.html
+++ b/source/index.html
@@ -254,14 +254,14 @@
       </div>
       <div class="module__message">
         Установлен климатический режим «Фиджи»
-        <div class="module__bottom">
-          <span class="module__left">
+        <p class="module__stats">
+          <span class="module__degree">
             Температура: <strong>24 C</strong>
           </span>
-          <span class="module__right">
+          <span class="module__humidity">
             Влажность: <strong>80%</strong>
           </span>
-        </div>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -312,22 +312,20 @@
           <span class="module__date">18:16, Сегодня</span>
         </div>
       </div>
-      <div class="module__message">
-        <div class="player">
-          <p>Сейчас проигрывается:</p>
-          <div class="player__content">
-            <div class="player__song">
-              <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
-              <div>
-                <p class="player__name">Florence & The Machine - Big God</p>
-                <div class="player__progress">
-                  <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
-                  <span class="player__time">4:31</span>
-                </div>
+      <div class="module__message player">
+        <p class="player__text">Сейчас проигрывается:</p>
+        <div class="player__content">
+          <div class="player__song">
+            <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
+            <div>
+              <p class="player__name">Florence & The Machine - Big God</p>
+              <div class="player__progress">
+                <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
               </div>
             </div>
-            <div class="player__controls"></div>
+            <span class="player__time">4:31</span>
           </div>
+          <div class="player__controls"></div>
         </div>
       </div>
       <button class="module__close" type="button">
@@ -355,14 +353,10 @@
       </div>
       <div class="module__message">
         Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
-        <div class="module__bottom">
-          <p class="module__left">
-            <button class="button button--yellow" type="button">Да</button>
-          </p>
-          <p class="module__right">
-            <button class="button button--gray" type="button">Нет</button>
-          </p>
-        </div>
+        <p class="module__buttons">
+          <button class="button button--yellow" type="button">Да</button>
+          <button class="button button--gray" type="button">Нет</button>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -457,7 +451,8 @@
 
 @@include('partials/page-footer.html')
 <template>
-  <article class="module grid__cell">
+
+  <article class="module grid__cell" tabindex="0">
     <div class="module__top">
       <h3 class="module__title">
         <span class="module__icon">
@@ -471,20 +466,7 @@
         <span class="module__date"></span>
       </div>
     </div>
-    <div class="module__message">
-      <div class="module__bottom">
-        <span class="module__left">
-          Температура: <strong></strong>
-        </span>
-        <span class="module__right">
-          Влажность: <strong></strong>
-        </span>
-      </div>
-      <picture>
-        <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
-        <img class="module__image" src="images/image@1x.jpg" srcset="images/image@1x.jpg 1x, images/image@2x.jpg 2x" alt="">
-      </picture>
-    </div>
+    <div class="module__message"></div>
     <button class="module__close" type="button">
       <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#cross"></use>
@@ -498,6 +480,26 @@
       <span class="visually-hidden">Дальше!</span>
     </button>
   </article>
+
+  <p class="module__stats">
+    <span class="module__degree">
+      Температура: <strong>24 C</strong>
+    </span>
+    <span class="module__humidity">
+      Влажность: <strong>80%</strong>
+    </span>
+  </p>
+
+  <p class="module__buttons">
+    <button class="button button--yellow" type="button">Да</button>
+    <button class="button button--gray" type="button">Нет</button>
+  </p>
+
+  <picture class="module__picture">
+    <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
+    <img class="module__image" src="images/image@1x.jpg" srcset="images/image@1x.jpg 1x, images/image@2x.jpg 2x" alt="">
+  </picture>
+
 </template>
 
 <script src="js/script.min.js"></script>
