--- a/source/index.html
+++ b/source/index.html
@@ -317,13 +317,13 @@
         <div class="player__content">
           <div class="player__song">
             <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
-            <div>
+            <div class="player__right">
               <p class="player__name">Florence & The Machine - Big God</p>
               <div class="player__progress">
                 <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
               </div>
+              <span class="player__time">4:31</span>
             </div>
-            <span class="player__time">4:31</span>
           </div>
           <div class="player__controls"></div>
         </div>
