--- a/source/index.html
+++ b/source/index.html
@@ -142,10 +142,10 @@
           </span>
           Еженедельный отчет по расходам ресурсов
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Сенсоры потребления</span>
           <span class="module__date">19:00, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
@@ -172,10 +172,10 @@
           </span>
           Дверь открыта
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Сенсор входной двери</span>
           <span class="module__date">18:50, Сегодня</span>
-        </div>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -201,10 +201,10 @@
           </span>
           Уборка закончена
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Пылесос</span>
           <span class="module__date">18:45, Сегодня</span>
-        </div>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -224,10 +224,10 @@
           </span>
           Новый пользователь
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Роутер</span>
           <span class="module__date">18:45, Сегодня</span>
-        </div>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -247,10 +247,10 @@
           </span>
           Изменен климатический режим
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Сенсор микроклимата</span>
           <span class="module__date">18:30, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         Установлен климатический режим «Фиджи»
@@ -281,10 +281,10 @@
           </span>
           Невозможно включить кондиционер
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Кондиционер</span>
           <span class="module__date">18:21, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         В комнате открыто окно, закройте его и повторите попытку
@@ -307,10 +307,10 @@
           </span>
           Музыка включена
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Яндекс.Станция</span>
           <span class="module__date">18:16, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message player">
         <p class="player__text">Сейчас проигрывается:</p>
@@ -325,7 +325,9 @@
               <span class="player__time">4:31</span>
             </div>
           </div>
-          <div class="player__controls"></div>
+          <div class="player__controls">
+
+          </div>
         </div>
       </div>
       <button class="module__close" type="button">
@@ -346,10 +348,10 @@
           </span>
           Заканчивается молоко
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Холодильник</span>
           <span class="module__date">17:23, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
@@ -376,10 +378,10 @@
           </span>
           Зарядка завершена
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Оконный сенсор</span>
           <span class="module__date">16:22, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         Ура! Устройство «Оконный сенсор» снова в строю!
@@ -402,10 +404,10 @@
           </span>
           Пылесос застрял
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Сенсор движения</span>
           <span class="module__date">16:17, Сегодня</span>
-        </div>
+        </p>
       </div>
       <div class="module__message">
         Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
@@ -432,10 +434,10 @@
           </span>
           Вода вскипела
         </h3>
-        <div class="module__details">
+        <p class="module__details">
           <span class="module__type">Чайник</span>
           <span class="module__date">16:20, Сегодня</span>
-        </div>
+        </p>
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -461,10 +463,10 @@
           </svg>
         </span>
       </h3>
-      <div class="module__details">
+      <p class="module__details">
         <span class="module__type"></span>
         <span class="module__date"></span>
-      </div>
+      </p>
     </div>
     <div class="module__message"></div>
     <button class="module__close" type="button">
