--- a/source/index.html
+++ b/source/index.html
@@ -319,14 +319,23 @@
             <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
             <div class="player__right">
               <p class="player__name">Florence & The Machine - Big God</p>
-              <div class="player__progress">
+              <div class="player__line">
                 <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
               </div>
               <span class="player__time">4:31</span>
             </div>
           </div>
           <div class="player__controls">
-
+            <p class="player__controls-wrap">
+              <button class="player__control player__control--prev" type="button"><span class="visually-hidden">Перемотай назад</span></button>
+              <button class="player__control player__control--next" type="button"><span class="visually-hidden">Перемотай вперёд</span></button>
+            </p>
+            <div class="player__right">
+              <div class="player__line">
+                <button class="player__button"><span class="visually-hidden">Громкость</span></button>
+              </div>
+              <span class="player__time">80%</span>
+            </div>
           </div>
         </div>
       </div>
