--- a/source/index.html
+++ b/source/index.html
@@ -149,10 +149,7 @@
       </div>
       <div class="module__message">
         Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
-        <picture>
-          <source srcset="images/stats@1x.webp 1x, images/stats@2x.webp 2x" type="image/webp">
-          <img class="module__image" src="images/stats@1x.jpg" srcset="images/stats@1x.jpg 1x, images/stats@2x.jpg 2x" alt="Еженедельный отчет по расходам ресурсов">
-        </picture>
+        <img class="module__graph" src="images/data.svg" alt="Еженедельный отчет по расходам ресурсов">
       </div>
       <button class="module__close" type="button">
         <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
@@ -421,8 +418,8 @@
       <div class="module__message">
         Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
         <picture>
-          <source srcset="images/get_it_from_mocks@1x.webp 1x, images/get_it_from_mocks@2x.webp 2x" type="image/webp">
-          <img class="module__image" src="images/get_it_from_mocks@1x.jpg" srcset="images/get_it_from_mocks@1x.jpg 1x, images/get_it_from_mocks@2x.jpg 2x" alt="Вид с камеры в гостиной">
+          <source srcset="images/robot-cleaner@1x.webp 1x, images/robot-cleaner@2x.webp 2x" type="image/webp">
+          <img class="module__image" src="images/robot-cleaner@1x.jpg" srcset="images/robot-cleaner@1x.jpg 1x, images/robot-cleaner@2x.jpg 2x" alt="Вид с камеры в гостиной">
         </picture>
       </div>
       <button class="module__close" type="button">
@@ -505,6 +502,8 @@
     <button class="button button--yellow" type="button">Да</button>
     <button class="button button--gray" type="button">Нет</button>
   </p>
+
+  <img class="module__graph" src="images/image.svg" alt="">
 
   <picture class="module__picture">
     <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
