Добавляет медиа в картинку

--- a/source/index.html
+++ b/source/index.html
@@ -418,6 +418,8 @@
       <div class="module__message">
         Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
         <picture>
+          <source srcset="images/robot-cleaner@2x.webp 1x, images/robot-cleaner@3x.webp 2x" media="(min-width: 1440px)" type="image/webp">
+          <source srcset="images/robot-cleaner@2x.jpg 1x, images/robot-cleaner@3x.jpg 2x" media="(min-width: 1440px)">
           <source srcset="images/robot-cleaner@1x.webp 1x, images/robot-cleaner@2x.webp 2x" type="image/webp">
           <img class="module__image" src="images/robot-cleaner@1x.jpg" srcset="images/robot-cleaner@1x.jpg 1x, images/robot-cleaner@2x.jpg 2x" alt="Вид с камеры в гостиной">
         </picture>
