--- a/source/index.html
+++ b/source/index.html
@@ -319,7 +319,7 @@
               <div class="player__line">
                 <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
               </div>
-              <span class="player__time">4:31</span>
+              <span class="player__num">4:31</span>
             </div>
           </div>
           <div class="player__controls">
@@ -331,7 +331,7 @@
               <div class="player__line">
                 <button class="player__button"><span class="visually-hidden">Громкость</span></button>
               </div>
-              <span class="player__time">80%</span>
+              <span class="player__num">80%</span>
             </div>
           </div>
         </div>
