--- a/source/index.html
+++ b/source/index.html
@@ -137,21 +137,22 @@
 @@include('partials/page-footer.html')
 <template id="moduleTemplate">
 
-  <article class="module grid__cell" tabindex="0">
+  <article class="module module--{{ type }} grid__cell grid__cell--{{ size }}" tabindex="0">
     <div class="module__top">
       <h3 class="module__title">
+        {{ title }}
         <span class="module__icon">
           <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#icon"></use>
+            <use xlink:href="#{{ icon }}"></use>
           </svg>
         </span>
       </h3>
       <p class="module__details">
-        <span class="module__type"></span>
-        <span class="module__date"></span>
+        <span class="module__type">{{ source }}</span>
+        <span class="module__date">{{ time }}</span>
       </p>
     </div>
-    <div class="module__message"></div>
+    <div class="module__message">{{ description }}</div>
     <button class="module__close" type="button">
       <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#cross"></use>
@@ -166,15 +167,26 @@
     </button>
   </article>
 
+  <img class="module__graph" src="images/data.svg" alt="Еженедельный отчет по расходам ресурсов">
+
+  <p class="module__stats">
+    <span class="module__degree">
+      Температура: <strong>{{ temperature }} C</strong>
+    </span>
+    <span class="module__humidity">
+      Влажность: <strong>{{ humidity }}%</strong>
+    </span>
+  </p>
+
   <div class="player">
     <div class="player__song">
-      <img class="player__image" src="#" width="53" height="52" alt="Обложка альбома">
+      <img class="player__image" src="{{ albumcover }}" width="53" height="52" alt="Обложка альбома">
       <div class="player__right">
-        <p class="player__name"></p>
+        <p class="player__name">{{ artist }} – {{ name }}</p>
         <div class="player__line">
           <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
         </div>
-        <span class="player__num"></span>
+        <span class="player__num">{{ length }}</span>
       </div>
     </div>
     <div class="player__controls">
@@ -186,26 +198,15 @@
         <div class="player__line">
           <button class="player__button"><span class="visually-hidden">Громкость</span></button>
         </div>
-        <span class="player__num"></span>
+        <span class="player__num">{{ volume }}%</span>
       </div>
     </div>
   </div>
-
-  <p class="module__stats">
-    <span class="module__degree">
-      Температура: <strong></strong>
-    </span>
-    <span class="module__humidity">
-      Влажность: <strong></strong>
-    </span>
-  </p>
 
   <p class="module__buttons">
     <button class="button button--yellow" type="button"></button>
     <button class="button button--gray" type="button"></button>
   </p>
-
-  <img class="module__graph" src="images/data.svg" alt="Еженедельный отчет по расходам ресурсов">
 
   <picture class="module__picture">
     <source srcset="images/robot-cleaner@2x.webp 1x, images/robot-cleaner@3x.webp 2x" media="(min-width: 1440px)" type="image/webp">
